# mysql-to-bigquery-schema-converter

./: .gitignore  LICENSE  Pipfile  README.md  convert.py  converter.py  pyproject.toml  runtests.py  setup.py  test.py  types_map.json
.github/: CODEOWNERS  dependabot.yml
converter/: __init__.py  converter.py  test.py
mysql_to_bigquery_schema_converter/: __init__.py
test_cases/: invalid_column_type.sql  invalid_field_mappings.json  invalid_type_mappings.json  missing_field_mappings.json  sample_table.json  sample_table.sql  sample_table_with_field_mappings.json  sample_table_with_type_mappings.json  valid_field_mappings.json  valid_type_mappings.json
test_data/: default_case.json  default_case.sql  field_mappings_case.sql  field_mappings_map.json  invalid_field_mappings_map.json  invalid_sql_case.sql  invalid_type_mappings_map.json  type_mappings_case.json  type_mappings_case.sql  type_mappings_map.json  virtual_case.sql
test_data_bigquery/: table_name_example.json
test_data_sql/: table_name_example.sql
utils/: bigquery_types_config.py
