[tool.poetry]
name = "mysql-to-bigquery-schema-converter"
version = "1.0.1"
description = "Can be used to convert mysql schema files to BigQuery schemas"
authors = [
    "Franz Buchsbaum <franz.buchsbaum@kununu.com>",
    "Lorenzo Alfine <lorenzo.alfine@kununu.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "mysql_to_bigquery_schema_converter" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
